tests/negative/semantic/wrong_arg_count_join/input.ci
void main() {
    print(toString(join(["a"])) + "\n");
}
